fix: remove padding for profile-card on tablet

--- a/src/styles/components/_profile.scss
+++ b/src/styles/components/_profile.scss
@@ -115,8 +115,4 @@
     grid-column: 1 / -1; // span all columns
     grid-row: auto;
   }
-
-  @media (max-width: $breakpoint-lg) {
-    padding-bottom: 0;
-  }
 }
